--- a/prepros.config
+++ b/prepros.config
@@ -67,8 +67,7 @@
           "*.coffee",
           "*.kit",
           "*.turf",
-          "*.ts",
-          "/dev/index.html"
+          "*.ts"
         ],
         "exceptions": []
       }
@@ -781,14 +780,13 @@
         ],
         "output": {
           "extension": ".html",
-          "type": "SOURCE_RELATIVE",
+          "type": "REPLACE_SEGMENTS",
           "segments": [
             {
               "segment": "turf",
               "replaceWith": "html"
             }
-          ],
-          "relativePath": "../deploy"
+          ]
         }
       },
       "typescript": {
@@ -882,6 +880,12 @@
       }
     },
     "files": [
+      {
+        "file": "dev/index.kit",
+        "config": {
+          "customOutput": "deploy/index.html"
+        }
+      },
       {
         "file": "dev/scss/styles.scss",
         "config": {
