added week 2 homework

--- a/prepros.config
+++ b/prepros.config
@@ -9,12 +9,12 @@
     },
     "reload": {
       "enable": true,
-      "delay": 0,
+      "delay": 1,
       "animate": true,
       "afterUpload": false
     },
     "sync": {
-      "enable": false,
+      "enable": true,
       "mouse": true,
       "keyboard": true,
       "form": true,
@@ -67,7 +67,8 @@
           "*.coffee",
           "*.kit",
           "*.turf",
-          "*.ts"
+          "*.ts",
+          "/dev/index.html"
         ],
         "exceptions": []
       }
@@ -517,13 +518,14 @@
         ],
         "output": {
           "extension": ".html",
-          "type": "REPLACE_SEGMENTS",
+          "type": "SOURCE_RELATIVE",
           "segments": [
             {
               "segment": "pug",
               "replaceWith": "html"
             }
-          ]
+          ],
+          "relativePath": "../deploy/"
         }
       },
       "css": {
@@ -779,13 +781,14 @@
         ],
         "output": {
           "extension": ".html",
-          "type": "REPLACE_SEGMENTS",
+          "type": "SOURCE_RELATIVE",
           "segments": [
             {
               "segment": "turf",
               "replaceWith": "html"
             }
-          ]
+          ],
+          "relativePath": "../deploy"
         }
       },
       "typescript": {
@@ -878,6 +881,19 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "dev/index.kit",
+        "config": {
+          "customOutput": "deploy/index.html"
+        }
+      },
+      {
+        "file": "dev/scss/styles.scss",
+        "config": {
+          "customOutput": "deploy/css/styles.css"
+        }
+      }
+    ]
   }
 }
